css/main.css
.clearfix:before, .clearfix:after { content: "\0020"; display: block; height: 0; overflow: hidden; }  
.clearfix:after { clear: both; }  
.clearfix { zoom: 1; } 

 
html {
	text-align: center;
	padding: 0;
	color: #333;
	font-family: "Open Sans", sans-serif;
	font-size: 15px;
	margin: 0 auto;
}
body {
	background-image: url(../images/bg.png);
	background-size: cover;
	background-repeat: no-repeat;
	background-attachment: fixed;
	background-position: top center;
	padding: 50px 0;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: 'Strait', sans-serif;
	text-transform: uppercase;
}
h1 {
	font-size: 2.5em;
}
h2 {
	font-size: 2em;
}
h3 {
	font-size: 1.5em;
}
h4 {
	font-size: 1.25em;
}
h5, h6, p {
	font-size: 1.2em;
	line-height: 1.6em;
}
a {
	color: #333;
	text-decoration: none;
	border-bottom: 1px solid;
}
a:hover {
	background: red;
}
.icon {
    font-family: 'Pictos Custom';
    -webkit-font-smoothing: antialiased;
    display: inline-block;
}
[data-icon]:before {
	font-family: 'Pictos Custom';
	content: attr(data-icon);
	display: inline-block;
	margin: 10px;
}


.wrapper {
	max-width: 1000px;
	margin: 50px auto;
	background: rgba(255,255,255,.9);
	box-shadow: 0px 0px 10px rgba(0,0,0,.5), 0px 0px 1px rgba(0,0,0,.5), inset 0px 0px 0px 2px rgba(255,255,255,1);
}
section {
	padding: 50px;
	border-bottom: 1px solid #fff;
}


#prisonYard {
	display: inline-block;
	position: relative;
	z-index: 1;
	text-align: center;
	color: #333;
	padding: 10px;
	margin: 50px;
	border: 5px solid #333;
}
h1#title {
	text-transform: uppercase;
	margin: 0 0 0px;
	padding: 0;
	font-size: 4em;	
}
h2#subtitle {
	display: ;
	margin: 0;
	padding: 0;
	text-transform: uppercase;
}
#videoWrapper {
	padding: 5%;
	background: rgba(0,0,0,.75);
}
#tagline span {
	font-size: 5em;
	display: block;
	color: white;
	display: absolute;
	z-index: 9999;
	font-family: "Strait";
	text-transform: uppercase;
	padding: 0 0 5% 0;
}

.flowplayer { 
   	position: relative;
   	z-index: 1;
   	box-shadow: 0px 0px 10px rgba(0,0,0,.5);
}
.flowplayer .fp-controls { 
   background-color: rgba(0, 0, 0, 0.4);
   display: none;
}
.flowplayer .fp-timeline { 
	background-color: rgba(0, 0, 0, 0.5);
	display: none;
}
.flowplayer .fp-progress { 
	background-color: rgba(219, 0, 0, 1);
	display: none;
}
.flowplayer .fp-buffer { 
	background-color: rgba(249, 249, 249, 1);
	display: none;
}
#offer {
	display: inline-block;
	border: dashed 2px #333;
	background: white;
	border-radius: 10px;
	margin: 30px;
	padding: 30px;
}
#offer span {
	font-size: 2em;
	text-align: center;
	line-height: 1em;
}
span#days {
	font-size: 4em;
	text-transform: uppercase;
	display: block;
}
span#times {
	font-size: 3em;
	display: block;
}
#where span {
	text-align: left;
	float: left;
	display: block;
	font-size: 2em;
	width: 40%;
	margin:  100px 5%;
}
#where iframe {
	width: 49%;
	float: right;
	border: 1px solid #333;
}
#bring ul {
	margin: 0;
	padding: 0;
}
#bring ul li {
	text-decoration: none;
	font-size: 2em;
	display: inline-block;
	padding: 20px;
}

#socialWrapper {
	color: white;
	height: auto;
	float: none;
	clear: both;
	padding: 5px 20px;
	margin: 0 auto;
	width: intrinsic;
}
#socialWrapper a:hover {
	background: none;
	border:none;
}
.fb-like {
	text-align: center;
}

#expect {
	color: #333;
	padding: 50px 5%;
	text-align: left;
}
footer {
	padding: 50px;
}
@media screen and (max-width: 580px) {
	body {
		background: none;
		padding: 0;
		margin: 0;
	}
	.wrapper {
		margin: 0;
	}
	.flowplayer { 
	   	width: 100%; 
	   	background-color: #222;
	   	position: relative;
	   	z-index: 1;
	}
	#prisonYard {
		margin: 5%;
	}
	h1#title {
		
	}
	h2#subtitle {
		
	}
	.icon {
	    font-family: 'Pictos Custom';
	    -webkit-font-smoothing: antialiased;
	    display: block;
	    float: none;
	}
	[data-icon]:before {
		font-family: 'Pictos Custom';
		content: attr(data-icon);
		font-size: 40px;
		display: inline;
		margin: 0 10px 0 0;
	}
	section {
		padding: 5%;
	}
	#tagline span { 
		font-size: 3em;
	}
	#offer {
		margin: 0 0 10px;
	}
	span#days {
		font-size: 2.5em;
	}
	span#times {
		font-size: 1.5em;
	}
	#where span {
		text-align: center;
		float: none;
		display: block;
		font-size: 1.5em;
		width: 100%;
		margin: 50px 0;
	}
	#where iframe {
		width: 100%;
		float: none;
		border: 1px solid #333;
	}
	#bring ul {
		margin: 0;
		padding: 0;
	}
	#bring ul li {
		text-decoration: none;
		font-size: 2em;
		display: block;
		padding: 20px;
	}
	#bring ul li .icon {
		display: inline-block;
	}
}

